Comentarios sobre el código

--- a/Web.config
+++ b/Web.config
@@ -5,14 +5,21 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+	  <!-- EF: Configuración de Entity Framework -->
+
+	  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <!--<connectionStrings>
+
+	<!-- EF: Connection String comentada (versión anterior) -->
+
+	<!--<connectionStrings>
     <add name="DefaultConnection" 
          connectionString="Server=localhost\SQLEXPRESS;Database=PacientesDB;Integrated Security=true;TrustServerCertificate=true;" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>-->
+
+	<!-- EF: Connection String activa para la instancia de SQL Server -->
 
 	<connectionStrings>
 		<add name="DefaultConnection"
