--- a/Web.config
+++ b/Web.config
@@ -36,6 +36,11 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
+	  <!-- Manejo de errores personalizado -->
+	  <customErrors mode="On" defaultRedirect="~/Error/ServerError">
+		  <error statusCode="404" redirect="~/Error/NotFound" />
+		  <error statusCode="500" redirect="~/Error/ServerError" />
+	  </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
